kanc/src/tests/sample_code/should_fail/single_file/type_check/labeled_call_args/multiple_missing_args.k
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

type Rgb {
    .C(~r: Nat, ~g: Nat, ~b: Nat): Rgb,
}

let O = Nat.O;
let rgb = Rgb.C;

let right = rgb(r: O, g: O, b: O);
let wrong = rgb(r: O);
